--- a/game2048.css
+++ b/game2048.css
@@ -9,7 +9,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	background-color: #000000;
+	background-color: #1A8FE3;
 	width: 545px;
 	height: 545px;
 }
@@ -23,12 +23,13 @@
 }
 
 .c {
-	height: 130px;
-	width: 130px;
-	background-color: #aaaaaa;
-	color: #ff0000;
+	height: 132px;
+	width: 132px;
+	background-color: #6610F2;
+	color: #F17105;
 	font-size: 50px;
 	font-weight: bold;
+	border: solid 1px #E6C229;
 }
 
 .score-board {
